# nb_bot

./: .gitignore  Dockerfile  README.md  SYSTEM_PROMPT.md  docker-compose.dev.yml  docker-compose.prod.yml  faq.json  guests_full.json  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml
src/: Dockerfile  bot.py  db_init.py  exceptions.py  gpt.py  main.py  members_json.py  settings.py  texts.py
src/crud/: enums.py  exceptions.py  models.py  operations.py
src/handlers/: faq.py  menu.py  registration.py  start.py  whishes.py
src/middlewares/: __init__.py  admin_role.py  check_visitor.py
src/schemas/: visitor.py
