[project]
name = "nb-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "mazazyrik",email = "117200062+mazazyrik@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "fastapi[all] (>=0.123.5,<0.124.0)",
    "tortoise-orm[asyncpg] (>=0.25.1,<0.26.0)",
    "ruff (>=0.14.7,<0.15.0)"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
